--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TerritoryWebDB;User Id=sa;Password=W1llUs3#;"
+    "DefaultConnection": "Server=localhost;Database=TerritoryWebDB;User Id=sa;Password=;"
   },
   "Logging": {
     "LogLevel": {
